--- a/src/main/resources/templates/htmlupload.html
+++ b/src/main/resources/templates/htmlupload.html
@@ -5,7 +5,9 @@
 
         <div>
                 <form method="POST" enctype="multipart/form-data" action="/pdf">
+<tr><tc>Validation Profile:
                         <table>
+
 
          <input type="radio" name="level" value="1a">1a
 
@@ -18,15 +20,17 @@
                                 <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
                                 <tr><td></td><td><input type="submit" value="Validate" /></td></tr>
 
-                        </table>
+                        </table></td></tr>
                 </form>
         </div>
 
-    <h4>Result</h4>
+
 
 
     <form action="#" th:object="${result}" method="post">
-            <p>Is the given pdf valid?: <label th:text="*{value}" /> </p>
+
+    <h4> PDF/A Validation Results</h4>             
+            <p>PDF/A compliance: <label th:text="*{value}" /> </p>
     </form>
 
 
